# hsh

./: LICENSE  README.md  hsh.cabal  stack.yaml
app/: Main.hs
src/HSH/: CommandLineParse.hs  Evaluate.hs  Exec.hs  MonitoredDirectory.hs  ShellState.hs
src/HSH/DataStructures/: PrefixTree.hs
test/HSH/: CommandLineParseSpec.hs  EvaluateSpec.hs  MonitoredDirectorySpec.hs  ShellStateSpec.hs
test/HSH/DataStructures/: PrefixTreeSpec.hs
