name:                hsh
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/hsh#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HSH.CommandLineParse
                     , HSH.Evaluate
                     , HSH.MonitoredDirectory
                     , HSH.ShellState
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2 && < 1
                     , directory >= 1.2.5.0 && < 2
                     , filepath >= 1.4.1.0 && < 2
                     , mtl
                     , process
                     , split >= 0.2.3.1 && < 1
                     , unix
  default-language:    Haskell2010

executable hsh
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , hsh
  default-language:    Haskell2010

test-suite hsh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsh
                     , checkers >= 0.4.4 && < 1
                     , containers
                     , mtl
                     , filepath
                     , hspec
                     , hspec-expectations
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsh
